// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionNav Business Guide Renders a Third-level Section Navigation 1`] = `
<div
  className="sectionNav null null"
  id="article-navigation-desktop"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <a
    className="backLink"
    id="article-navigation-back-button-desktop"
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    Back to all topics
  </a>
  <span
    id="article-navigation-title-desktop"
  >
    <h2>
      Launch
    </h2>
    <h4>
       your business
    </h4>
  </span>
  <ul>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-0"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Pick your business location
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop currentNavLink"
        id="desktop-article-link-1"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Choose a business structure
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-2"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Choose your business name
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-3"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Register your business
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-4"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Get federal and state tax ID numbers
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-5"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Apply for licenses and permits
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-6"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Open a business bank account
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-7"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Get business insurance
      </a>
    </li>
  </ul>
</div>
`;

exports[`SectionNav For Partners Renders a Fourth-level Section Navigation 1`] = `
<div
  className="sectionNav null null"
  id="article-navigation-desktop"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
  <a
    className="backLink"
    id="article-navigation-back-button-desktop"
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    Back to 7(a) Loans
  </a>
  <span
    id="article-navigation-title-desktop"
  >
    <h3>
      7(a) Loans
    </h3>
  </span>
  <ul>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-0"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Types of 7(a) Loans
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-1"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Operate as a 7(a) Lender
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop currentNavLink"
        id="desktop-article-link-2"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Secondary Markets
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-3"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Training and Courses
      </a>
    </li>
    <li>
      <a
        className="article-navigation-article-link-desktop "
        id="desktop-article-link-4"
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Terms and Eligibility
      </a>
    </li>
  </ul>
</div>
`;
